azure/aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      #HELLO WORLD PATH
      - path: /api/v1/example
        pathType: Prefix
        backend:
          service:
            name: hello-world-deployment
            port:
              number: 8080
      #HR DATA
      - path: /api/v1/employee(.*)
        pathType: Prefix
        backend:
          service:
            name: hr-data-deployment
            port:
              number: 8080
      #WORKER DATA
      - path: /api/v1/worker(.*)
        pathType: Prefix
        backend:
          service:
            name: worker-deployment
            port:
              number: 8080
